# telepose

./: README.md
openpose_pkg/: CMakeLists.txt  \  keypoints3d.cpp  optoroshand.py  package.xml  pointtoxbotdiff.py
openpose_pkg/progress_code/: optoros.py  optoroselbow.py  pointtoxbot.py  pointtoxbot2hand.py  pointtoxbothand.py
openpose_ros_msgs/: CMakeLists.txt  package.xml
openpose_ros_msgs/msg/: PersonDetection.msg  Persons.msg
