<?xml version="1.0"?>
<package>
  <name>openpose_ros_msgs</name>
  <version>0.1.0</version>
  <description>ROS messages for CMU Openpose</description>

  <maintainer email="emily-jane.rolley@iit.it">Emily Rolley-Parnell</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
